--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
+  TEST
+
    <% if !session[:user_id] %>
    <%= link_to "Blog Posts", posts_path %>
    <%= link_to "Authors", authors_path %>
