--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,14 @@
 <h2><% @post.users.each do |u| %>
 By <%= u.name %> </h2>
 <% end %>
+<% if (@post.users.select {|p| p.id == current_user.id}).length > 0 %>
+  <%= link_to 'Edit', edit_post_path(@post) %>
+  <%# <%= link_to 'Delete', delete_post_path(@post) %>
+<% end %>
 
 
 <p> <%= @post.content %> </p>
+
+<%= render 'comments/comment' %>
+
+<%= link_to 'Back', posts_path %>
