--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,14 +5,46 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <!-- Font Awesome CDN -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- Bulma CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.4/css/bulma.css">
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+
+
+
+
+<ul class="nav justify-content-center">
+<% if !session[:user_id] %>
+   
+   <%= link_to "Authors", authors_path %>
+   <%= form_tag("/login", method: :post) do %>
+    <div>
+      <%= label_tag :email %>
+      <%= text_field_tag :email%>
+    </div>
+    <div>
+      <%= label_tag :password %>
+      <%= password_field_tag :password %>
+    </div>
+      <%= submit_tag "Login" %>
+  <%end%>
+  <%= link_to "Sign-up", signup_path%>
+<%end%>
+
+  <li class="nav-item">
+    <a class="nav-link active" href=<%= link_to "Blog Posts", posts_path %>></a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" href="#">Link</a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+  </li>
+</ul>
+  
 
    <% if !session[:user_id] %>
    <%= link_to "Blog Posts", posts_path %>
