--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,10 +2,13 @@
 <h2><% @post.users.each do |u| %>
 By <%= u.name %> </h2>
 <% end %>
-<% if (@post.users.select {|p| p.id == current_user.id}).length > 0 %>
-  <%= link_to 'Edit', edit_post_path(@post) %>
-  <%# <%= link_to 'Delete', delete_post_path(@post) %>
+<% if current_user %>
+  <% if (@post.users.select {|p| p.id == current_user.id}).length > 0 %>
+    <%= link_to 'Edit', edit_post_path(@post) %>
+    <%# <%= link_to 'Delete', delete_post_path(@post) %>
+  <% end %>
 <% end %>
+
 
 
 <p> <%= @post.content %> </p>
