--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,67 +9,66 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
+      <!--
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Dropdown
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href="#">Something else here</a>
+        </div>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+      </li>
+      -->
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
+  <a class="navbar-brand" href="#">Off the Rails Blog</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-
-
-<ul class="nav justify-content-center">
-<% if !session[:user_id] %>
-   
-   <%= link_to "Authors", authors_path %>
-   <%= form_tag("/login", method: :post) do %>
-    <div>
-      <%= label_tag :email %>
-      <%= text_field_tag :email%>
-    </div>
-    <div>
-      <%= label_tag :password %>
-      <%= password_field_tag :password %>
-    </div>
-      <%= submit_tag "Login" %>
-  <%end%>
-  <%= link_to "Sign-up", signup_path%>
-<%end%>
-
-  <li class="nav-item">
-    <a class="nav-link active" href=<%= link_to "Blog Posts", posts_path %>></a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link" href="#">Link</a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-  </li>
-</ul>
-  
-
-   <% if !session[:user_id] %>
-   <%= link_to "Blog Posts", posts_path %>
-   <%= link_to "Authors", authors_path %>
-   <%= form_tag("/login", method: :post) do %>
-    <div>
-      <%= label_tag :email %>
-      <%= text_field_tag :email%>
-    </div>
-    <div>
-      <%= label_tag :password %>
-      <%= password_field_tag :password %>
-    </div>
-      <%= submit_tag "Login" %>
-  <% end %>
-  <%= link_to "Sign-up", signup_path%>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+    <% if !session[:user_id] %>
+      <li class="nav-item active">
+        <a class="nav-link" href=<%= posts_path %>>All Blog Posts <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href=<%= authors_path %>>All Authors <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href=<%= login_path %>>Login <span class="sr-only"></span></a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
   <% else %>
-   <%= link_to "Blog Posts", posts_path %>
-   <%= link_to "Authors", authors_path %>
-   <%= link_to "Create new post", new_post_path %>
-   <%= link_to "My Profile", user_path(session[:user_id]) %>
-   <%= form_tag("/logout", method: :get) do %>
-      <%= submit_tag "Logout" %>
-   <% end %>
-  <% end %>
+    <li class="nav-item active">
+        <a class="nav-link" href=<%= posts_path %>>All Blog Posts <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href=<%= authors_path %>>All Authors <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href=<%= new_post_path %>>Write New Post <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href=<%= user_path(current_user.id) %>>My Account <span class="sr-only"></span></a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href=<%= logout_path %>>Logout <span class="sr-only"></span></a>
+      </li>
+      <% end %>
+      </div>
+</nav>
+
 
   <body>
     <%= yield %>
