--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <h1>Author's Page</h1>
 
+<img src=<%= @user.img_url %> alt="">
 <h3>Name of Author: <%= @user.name %> </h3>
 
 <h3>Author's Posts:</h3>
