--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,13 @@
 <p>All blog posts here</p>
 
+<div class="card-columns">
 <% @posts.each do |p| %>
-<ul><%=  link_to p.title, p %></ul>
-<% end %>
+  <div class="card">
+    <img src=<%= p.img_url %> class="card-img-top" alt="...">
+    <div class="card-body">
+      <h5 class="card-title"><%= link_to p.title, p %></h5>
+      <p class="card-text"><%= p.content.truncate(100, separator: ' ') %></p>
+    </div>
+  </div>
+  <% end %>
+</div>
