--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -2,6 +2,7 @@
 <h2><% @post.users.each do |u| %>
 By <%= u.name %> </h2>
 <% end %>
+<img src=<%= @post.img_url %> alt="">
 <% if current_user %>
   <% if (@post.users.select {|p| p.id == current_user.id}).length > 0 %>
     <%= link_to 'Edit', edit_post_path(@post) %>
