--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,21 @@
+<h2> <%= pluralize(@comments.count, "Comment") %></h2>
+
 <% @comments.each do |comment| %>
 
-  <p><%= comment.user.name %></p>
+  <p><u><%= comment.user.name %></u> Published <%= long_ago(Time.now - comment.created_at)  %> ago</p>
   <p><%= comment.content %></p>
 
   <% if current_user == comment.user %>
-    <%= link_to 'Delete', [comment.post, comment], method: :delete %>
-    <%= link_to 'Edit', edit_post_comment_path(comment.post, comment) %>
+    <div class="center">
+    <%= button_to 'Delete', [comment.post, comment], method: :delete %>
+    <%= button_to 'Edit', edit_post_comment_path(comment.post, comment), method: :get
+     %>
+    <br>
+    </div>
   <% end %>
+  <br>
 <% end %>
+
 
 <% if user_signed_in? %>
   <%= render 'comments/form' %>
