--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,13 +1,15 @@
 <p>All blog posts here</p>
 
-<div class="card-columns">
-<% @posts.each do |p| %>
-  <div class="card">
-    <img src=<%= p.img_url %> class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title"><%= link_to p.title, p %></h5>
-      <p class="card-text"><%= p.content.truncate(100, separator: ' ') %></p>
+<div class="row">
+    <div class="card-columns">
+    <% @posts.each do |p| %>
+    <div class="card" style="width: 25rem; margin-left: 40px; margin-right: -50px">
+        <img src=<%= p.img_url %> class="card-img-top" alt="...">
+        <div class="card-body">
+        <h5 class="card-title"><%= link_to p.title, p %></h5>
+        <p class="card-text"><%= p.content.truncate(100, separator: ' ') %></p>
+        </div>
     </div>
-  </div>
-  <% end %>
+    <% end %>
+    </div>
 </div>
