--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,7 @@
 -->
 <div class="card-columns">
 <% @users.each do |u| %>
-  <div class="card">
+  <div class="card" style="width: 25rem; margin-left: 30px; margin-right: -50px">
     <img src=<%= u.img_url %> class="card-img-top" alt="...">
     <div class="card-body">
       <h5 class="card-title"><%= link_to u.name, u %></h5>
