Added login form

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,4 @@
-<p>All blog posts here</p>
-
-<div class="row">
+<div class="row" style="margin-top: 50px">
     <div class="card-columns">
     <% @posts.each do |p| %>
     <div class="card" style="width: 25rem; margin-left: 40px; margin-right: -50px">
