--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,14 +41,28 @@
       <li class="nav-item active">
         <a class="nav-link" href=<%= authors_path %>>All Authors <span class="sr-only"></span></a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href=<%= login_path %>>Login <span class="sr-only"></span></a>
-      </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <nav class="navbar navbar-light bg-light">
+      <%= form_tag '/login', method: 'post', :class => 'form-inline' do  %>
+          <input class="form-control mr-sm-2" placeholder="Email" <%= text_field_tag :email%>
+          <input class="form-control mr-sm-2" placeholder="Password"<%= password_field_tag :password%>
+        <%= submit_tag "Login", class: "btn btn-outline-success my-2 my-sm-0" %>
+      <%end%>
+    </nav>
+
+<!--
+<%= form_tag("/login", method: :post) do %>
+ <div>
+  <%= label_tag :email %>
+  <%= text_field_tag :email%>
+ </div>
+ <div>
+  <%= label_tag :password %>
+  <%= password_field_tag :password %>
+ </div>
+  <%= submit_tag "Submit" %>
+<%end%>
+-->
   <% else %>
     <li class="nav-item active">
         <a class="nav-link" href=<%= posts_path %>>All Blog Posts <span class="sr-only"></span></a>
