--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
         <a class="nav-link" href=<%= new_post_path %>>Write New Post <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href=<%= authors_path(current_user.id) %>>My Account <span class="sr-only"></span></a>
+        <a class="nav-link" href=<%= user_path(current_user.id) %>>My Account <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href=<%= logout_path %>>Logout <span class="sr-only"></span></a>
