--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,11 +26,12 @@
       </li>
       -->
 
+<!-- Image and text -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href="#">Off the Rails Blog</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+  <a class="navbar-brand" href="#">
+    <img src="app/assets/images/Pokt3Hfh_400x400.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
+    Off the Rails Blog
+  </a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
@@ -48,21 +49,10 @@
           <input class="form-control mr-sm-2" placeholder="Password"<%= password_field_tag :password%>
         <%= submit_tag "Login", class: "btn btn-outline-success my-2 my-sm-0" %>
       <%end%>
-    </nav>
-
-<!--
-<%= form_tag("/login", method: :post) do %>
- <div>
-  <%= label_tag :email %>
-  <%= text_field_tag :email%>
- </div>
- <div>
-  <%= label_tag :password %>
-  <%= password_field_tag :password %>
- </div>
-  <%= submit_tag "Submit" %>
-<%end%>
--->
+      </nav>
+      <nav class="navbar navbar-light bg-light">
+      <a href=<%= signup_path%> class="btn btn-primary" role="button" aria-pressed="true">Sign Up</a>
+      </nav>
   <% else %>
     <li class="nav-item active">
         <a class="nav-link" href=<%= posts_path %>>All Blog Posts <span class="sr-only"></span></a>
@@ -76,11 +66,11 @@
       <li class="nav-item active">
         <a class="nav-link" href=<%= user_path(current_user.id) %>>My Account <span class="sr-only"></span></a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href=<%= logout_path %>>Logout <span class="sr-only"></span></a>
+      <li class="nav-right">
+        <a class="nav-link"><%="Welcome, #{current_user.name}"%></a>
       </li>
+      <a href=<%= logout_path%> class="btn btn-primary" role="button" aria-pressed="true">Log Out</a>
       <% end %>
-      </div>
 </nav>
 
   <body>
