--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,11 +36,11 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
     <% if !session[:user_id] %>
-      <li class="nav-item active">
-        <a class="nav-link" href=<%= posts_path %>>All Blog Posts <span class="sr-only"></span></a>
+      <li class="nav-item">
+        <a class="nav-link active" href=<%= posts_path %>>All Blog Posts <span class="sr-only"></span></a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href=<%= authors_path %>>All Authors <span class="sr-only"></span></a>
+      <li class="nav-item">
+        <a class="nav-link active" href=<%= authors_path %>>All Authors <span class="sr-only"></span></a>
       </li>
     </ul>
     <nav class="navbar navbar-light bg-light">
@@ -55,16 +55,16 @@
       </nav>
   <% else %>
     <li class="nav-item active">
-        <a class="nav-link" href=<%= posts_path %>>All Blog Posts <span class="sr-only"></span></a>
+        <a class="nav-link" href=<%= posts_path %>>All Blog Posts <span class="sr-only">(current)</span></a>
       </li>
-      <li class="nav-item active">
-        <a class="nav-link" href=<%= authors_path %>>All Authors <span class="sr-only"></span></a>
+      <li class="nav-item">
+        <a class="nav-link active" href=<%= authors_path %>>All Authors <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" href=<%= new_post_path %>>Write New Post <span class="sr-only"></span></a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" href=<%= user_path(current_user.id) %>>My Account <span class="sr-only"></span></a>
+        <a class="nav-link" href=<%= "/users/#{current_user.id}/details" %>>My Account <span class="sr-only"></span></a>
       </li>
       <li class="nav-right">
         <a class="nav-link"><%="Welcome, #{current_user.name}"%></a>
