--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,9 +1,19 @@
-<h1>New Post Form</h1>
+<div align="center" style="margin-top: 100px">
+<h5 style="margin-bottom: 50px">Please write your post in the form below</h5>
+<%= form_for @post, :html => {:class => "form-horizontal center"} do |f| %>
+      <div class="form-group">
+        <%= f.label :title, "Title:", class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.text_field :title, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :content, "Content:", class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.text_area :content, class: "form-control" %>
+        </div>
+      </div>
 
-<%= form_for @post do |f| %>
-<%= f.label :title %>
-<%= f.text_field :title %>
-<%= f.label :content %>
-<%= f.text_area :content %>
-<%= f.submit %>
-<% end %>
+      <%= f.submit "Post", class: "btn btn-default btn-primary" %>  
+ <% end %>
+ </div>
