--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,18 @@
+<div class="card" style="margin-top: 50px; margin-left: 50px; margin-right: 50px">
+  <div class="card-header">
+    Latest Post
+  </div>
+  <div class="card-body">
+    <h5 class="card-title"><%= @posts.reverse[0].title%></h5>
+    <p class="card-text"><%= @posts.reverse[0].content.truncate(100, separator: ' ')%>.</p>
+    <a href=<%= post_path(@posts.reverse[0]) %> class="btn btn-primary">Read</a>
+  </div>
+</div>
+
 <div class="row" style="margin-top: 50px">
     <div class="card-columns">
-    <% @posts.each do |p| %>
-    <div class="card" style="width: 25rem; margin-left: 40px; margin-right: -50px">
+    <% @posts.reverse[1..-1].each do |p| %>
+    <div class="card" style="width: 22rem; margin-left: 65px">
         <img src=<%= p.img_url %> class="card-img-top" alt="...">
         <div class="card-body">
         <h5 class="card-title"><%= link_to p.title, p %></h5>
