Added styling to sign-up form. Added styling to post show pages. Added styling to comments form. Reversed order of comments. Created featured author. Created lastest post.

--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,7 +1,7 @@
 <div align="left">
 <%= form_for ([@post, @post.comments.build]), :html => {:class => "form-horizontal center"} do |f| %>
-        <div class="col-md-2">
-          <%= f.text_field :content, class: "form-control" %> <br>
+        <div class="col-md-35">
+          <%= f.text_area :content, class: "form-control", placeholder: "Write your comment here"%> <br>
           <%= f.submit "Comment", class: "btn btn-default btn-primary" %>  
         </div>    
  <% end %>
