--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,17 +1,16 @@
 <% if user_signed_in? %>
-  <%= render 'comments/form' %>
+  <%= render 'comments/form' %> <br>
   <% end%>
 <h2> <%= pluralize(@comments.count, "Comment") %></h2>
-<% @comments.each do |comment| %>
+<% @comments.reverse.each do |comment| %>
 
   <p><u><%= comment.user.name %></u> Published <%= long_ago(Time.now - comment.created_at)  %> ago</p>
   <p><%= comment.content %></p>
 
   <% if current_user == comment.user %>
     <div class="center">
-    <%= button_to 'Delete', [comment.post, comment], method: :delete %>
-    <%= button_to 'Edit', edit_post_comment_path(comment.post, comment), method: :get
-     %>
+    <a href=<%= edit_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Edit Post</a>
+    <a href=<%= edit_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Delete Post</a>
     <br>
     </div>
   <% end %>
