--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -10,7 +10,7 @@
       <div class="form-group">
         <%= f.label :content, "Content:", class: "col-md-4 control-label" %>
         <div class="col-md-8">
-          <%= f.text_area :content, class: "form-control" %>
+          </textarea><%= f.text_area :content, class: "form-control", rows: "8"%>
         </div>
       </div>
 
