--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,19 +1,34 @@
-<h1> <%= @post.title %></h1>
-<h2><% @post.users.each do |u| %>
-By <%= u.name %> </h2>
-<% end %>
-<img src=<%= @post.img_url %> alt="">
-<% if current_user %>
-  <% if (@post.users.select {|p| p.id == current_user.id}).length > 0 %>
-    <%= link_to 'Edit', edit_post_path(@post) %>
-    <%# <%= link_to 'Delete', delete_post_path(@post) %>
-  <% end %>
-<% end %>
-
-
-
-<p> <%= @post.content %> </p>
-
-<%= render 'comments/comment' %>
+<div class="container" style="margin-left: 35px; margin-top: 20px">
+  <div class="row">
+    <div class="col">
+      <h1> <%= @post.title %></h1>
+      <div class="row">
+        <div class="col">
+          <% @post.users.each do |u| %>
+            <h2>By <%= u.name %> </h2>
+          <% end %>
+          <% if current_user %>
+            <% if (@post.users.select {|p| p.id == current_user.id}).length > 0 %>
+              <div class="row">
+                <div class="col-sm-1.5" style="margin-left:15px"><a href=<%= edit_post_path%> class="btn btn-primary" role="button" aria-pressed="true">Edit Post</a></div>
+                <div class="col-sm-2"><a href=<%= edit_post_path%> class="btn btn-primary" role="button" aria-pressed="true">Delete Post</a></div>
+              </div>
+            <% end %>
+          <% end %>
+        <div class="row">
+          <div class="col-sm-9">
+            <p> <%= @post.content %> </p>
+          </div>
+          <div class="col-sm-3">
+            <%= render 'comments/comment' %>
+        </div>
+        </div>
+          
+      </div>
+        
+      </div>
+    </div>
+  </div>
+</div>
 
 <%= link_to 'Back', posts_path %>
