--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,19 +1,28 @@
 <div align="center" style="margin-top: 100px">
-<h5 style="margin-bottom: 50px">Please write your post in the form below</h5>
 <%= form_for @post, :html => {:class => "form-horizontal center"} do |f| %>
       <div class="form-group">
-        <%= f.label :title, "Title:", class: "col-md-4 control-label" %>
-        <div class="col-md-8">
-          <%= f.text_field :title, class: "form-control" %>
+        <div class="row">
+            <div class="col">
+                <h5>Please create your new post in the form below</h5>
+            </div> <br> <br> <br>
         </div>
+        <div class="row">
+            <div class="col-sm-1">
+                <%= f.label :title, "Title:", class: "col-md-4 control-label" %>
+            </div>
+            <div class="col-md-10">
+                <%= f.text_field :title, class: "form-control", placeholder: "Write the title of your new post here"%>
+            </div>
+        </div> <br>
+        <div class="row">
+            <div class="col-sm-1">
+                <%= f.label :content, "Content:", class: "col-md-4 control-label"%>
+            </div>
+            <div class="col-md-10">
+                <%= f.text_area :content, class: "form-control", rows: "8", placeholder: "Write your new post here"%>
+            </div>
+        </div>     
       </div>
-      <div class="form-group">
-        <%= f.label :content, "Content:", class: "col-md-4 control-label" %>
-        <div class="col-md-8">
-          </textarea><%= f.text_area :content, class: "form-control", rows: "8"%>
-        </div>
-      </div>
-
       <%= f.submit "Post", class: "btn btn-default btn-primary" %>  
  <% end %>
  </div>
