--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,12 @@
-<div class="container" style="margin-left: 35px; margin-top: 20px">
+<div class="container" style="margin-left: 35px; margin-top: 50px">
   <div class="row">
     <div class="col">
       <h1> <%= @post.title %></h1>
       <div class="row">
         <div class="col">
           <% @post.users.each do |u| %>
-            <h2>By <%= u.name %> </h2>
-          <% end %>
+            <h2>By <%= link_to u.name, u %> </h2>
+          <% end %> <br>
           <% if current_user %>
             <% if (@post.users.select {|p| p.id == current_user.id}).length > 0 %>
               <div class="row">
@@ -14,7 +14,7 @@
                 <div class="col-sm-2"><a href=<%= edit_post_path%> class="btn btn-primary" role="button" aria-pressed="true">Delete Post</a></div>
               </div>
             <% end %>
-          <% end %>
+          <% end %> <br>
         <div class="row">
           <div class="col-sm-9">
             <p> <%= @post.content %> </p>
