--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="card" style="margin-top: 50px; margin-left: 50px; margin-right: 50px">
-  <div class="card-header">
+  <div class="card-header" style= "width: 50%">
     <h4>Featured Author</h4>
   </div>
     <% @user = @users.sample%>
