--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -15,6 +15,18 @@ Please fill in the form below to create your account.</h5>
           <%= f.text_field :email, class: "form-control" %>
         </div>
       </div>
+      <div class="form-group">
+        <%= f.label "Profile Photo:", class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.file_field :avatar, class: "form-control" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <%= f.label :bio, "Bio:", class: "col-md-4 control-label" %>
+        <div class="col-md-8">
+          <%= f.text_area :bio, class: "form-control" %>
+        </div>
+      </div>
 
       <div class="form-group">
         <%= f.label :password, "Password:", class: "col-md-4 control-label" %>
