--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,10 @@
 <h1>Author's Page</h1>
 
-<img src=<%= @user.img_url %> alt="">
+<% if @user.img_url %>
+<img src="<%= @user.img_url %>" height="200" width="200" alt="">
+<% else %>
+<img src="<%= (url_for(@user.avatar)) %>" height="200" width="200" alt="">
+<% end %>
 <h3>Name of Author: <%= @user.name %> </h3>
 
 <h3>Author's Posts:</h3>
