--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,8 +10,10 @@
 
   <% if current_user == comment.user %>
     <div class="center">
-    <a href=<%= edit_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Edit Post</a>
-    <a href=<%= edit_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Delete Post</a>
+    <a href=<%= edit_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Edit</a>
+    <!--
+    <%# <a href=<%= delete_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Delete Post</a> %>
+    -->
     <br>
     </div>
   <% end %>
