--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -19,7 +19,7 @@
 <div class="card-header">
     <h4>All Posts</h4>
   </div>
-<?div>
+</div>
 <div class="card-columns" style="margin-top: 50px">
 <% @posts.sort.each do |p| %>
   <div class="card" style="width: 22rem; margin-left: 38px">
