--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -11,7 +11,7 @@
   <% if current_user == comment.user %>
     <div class="center">
     <a href=<%= edit_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Edit Post</a>
-    <a href=<%= edit_post_comment_path(comment.post, comment)%> class="btn btn-secondary btn-sm" role="button" aria-pressed="true">Delete Post</a>
+    <%= link_to "Delete", post_comment_path(comment), method: :delete %>
     <br>
     </div>
   <% end %>
