--- a/app/views/users/details.html.erb
+++ b/app/views/users/details.html.erb
@@ -12,7 +12,8 @@
 
 <% if @user.img_url && @user.img_url.length > 0 %>
 <img src= "<%= @user.img_url %>" height = 150, width = 100>
-<% else %>
+<% end %>
+<% if @user.img_url == 'https://www.idyllwildarts.org/wp-content/uploads/2016/09/blank-profile-picture.jpg' || nil %>
 <p><%= link_to "Add a profile picture", edit_user_path(@user) %></p>
 <% end %>
 
