fixed post edit

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -20,7 +20,7 @@
     <h4>All Posts</h4>
   </div>
 </div>
-<div class="card-columns" style="margin-top: 50px">
+<div class="card-columns" style="margin-top: 50px; margin-left: 50px; margin-right: 50px">
 <% @posts.sort.each do |p| %>
   <div class="card" style="width: 22rem; margin-left: 38px">
     <img height="200" width="150" src=<%= p.img_url %> class="card-img-top" alt="...">
