--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,5 +1,3 @@
-<h1>Home#index</h1>
-
 <header class="masthead">
     <div class="container h-300">
       <div class="row h-300 align-items-center justify-content-center text-center">
@@ -8,8 +6,8 @@
           <hr class="divider my-4">
         </div>
         <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
+          <p class="text-white-75 font-weight-light mb-5">Welcome to the Off the Rails Blog!</p>
+          <a class="btn btn-primary btn-xl js-scroll-trigger" href=<%=posts_path%>>Start Reading</a>
         </div>
       </div>
     </div>
