--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,7 @@
 
 <!-- Image and text -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light" style="background-color: #e3f2fd;">
-  <a class="navbar-brand" href= <% root_path %> >
-    <img src="app/assets/images/Pokt3Hfh_400x400.jpg" width="30" height="30" class="d-inline-block align-top" alt="">
-    Off the Rails Blog
-  </a>
+  <a class="navbar-brand" href= "/" >Off the Rails Blog</a>
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
