--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,5 +1,5 @@
 <header class="masthead">
-    <div class="container h-300">
+    <div class="container h-300" style="background: color url(https://drive.google.com/uc?&id=1Wmrx7IA8OKs7ceIODiJ4AHW-fOnYJP1c)" >
       <div class="row h-300 align-items-center justify-content-center text-center">
         <div class="col-lg-10 align-self-end">
           <h1 class="text-uppercase text-white font-weight-bold">Welcome to the Off the Rails Blog!</h1>
