--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -1,14 +1,14 @@
 <header class="masthead">
-    <div class="container h-300" style="background: color url(https://drive.google.com/uc?&id=1Wmrx7IA8OKs7ceIODiJ4AHW-fOnYJP1c)" >
-      <div class="row h-300 align-items-center justify-content-center text-center">
-        <div class="col-lg-10 align-self-end">
-          <h1 class="text-uppercase text-white font-weight-bold">Welcome to the Off the Rails Blog!</h1>
-          <hr class="divider my-4">
-        </div>
-        <div class="col-lg-8 align-self-baseline">
-          <p class="text-white-75 font-weight-light mb-5">Welcome to the Off the Rails Blog!</p>
-          <a class="btn btn-primary btn-xl js-scroll-trigger" href=<%=posts_path%>>Start Reading</a>
-        </div>
-      </div>
-    </div>
-  </header>
+   <div class="container h-300" style="background: color url(https://drive.google.com/uc?&id=1Wmrx7IA8OKs7ceIODiJ4AHW-fOnYJP1c)" >
+     <div class="row h-300 align-items-center justify-content-center text-center">
+       <%= image_tag('https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/56815938_1925598344213100_7031455676572368896_n.jpg?_nc_cat=110&_nc_ht=scontent-lht6-1.xx&oh=01320b12c7115b80304e7aa1276496ed&oe=5D5E961A', style: "height: 600px; width: 750px") %>
+       <div class="col-lg-10 align-self-end">
+         <h1 class="text-uppercase text-black font-weight-bold">Welcome to the Off the Rails Blog!</h1>
+         <hr class="divider my-4">
+       </div>
+       <div class="col-lg-8 align-self-baseline">
+         <a class="btn btn-primary btn-xl js-scroll-trigger" href=<%=posts_path%>>Start Reading</a>
+       </div>
+     </div>
+   </div>
+ </header>
